# ADXL345-Library-Project

./: .gitignore  CMakeLists.txt  README.MD  hello_test.cc  notes.txt
src/: CMakeLists.txt  errors.h  main.cpp
